WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128614
[New Multicolumn] getClientRects returns wrong rectangle
https://bugs.webkit.org/show_bug.cgi?id=128614
Summary
[New Multicolumn] getClientRects returns wrong rectangle
Dave Hyatt
Reported
2014-02-11 11:22:12 PST
Make sure getClientRects is as good as the old multicolumn code. The old code returned the column that contained the center point of the content, so that's what we do. Eventually we should return multiple rectangles, but for now this at least gives us parity with the region code and the old multicolumn code.
Attachments
Patch
(70.39 KB, patch)
2014-02-11 11:24 PST
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(110.51 KB, patch)
2014-02-11 13:20 PST
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(109.18 KB, patch)
2014-02-11 13:23 PST
,
Dave Hyatt
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-02-11 11:24:27 PST
Created
attachment 223884
[details]
Patch
Dave Hyatt
Comment 2
2014-02-11 13:20:44 PST
Created
attachment 223892
[details]
Patch
Dave Hyatt
Comment 3
2014-02-11 13:23:06 PST
Created
attachment 223893
[details]
Patch
Sam Weinig
Comment 4
2014-02-11 13:27:57 PST
Comment on
attachment 223893
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=223893&action=review
> Source/WebCore/rendering/RenderMultiColumnFlowThread.cpp:180 > + return 0;
We have been switching to nullptr in cases like this.
> Source/WebCore/rendering/RenderMultiColumnFlowThread.cpp:192 > + return 0;
We have been switching to nullptr in cases like this.
Dave Hyatt
Comment 5
2014-03-20 13:27:13 PDT
Fixed in
r165991
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug