[New Multicolumn] getClientRects returns wrong rectangle https://bugs.webkit.org/show_bug.cgi?id=128614

Reviewed by Sam Weinig.

Added fast/multicol/newmulticol/client-rects.html and beefed up existing
fast/multicol/client-rects.html to use more writing modes.

Source/WebCore:

* rendering/LayoutState.h:
Removed unused function.

* rendering/RenderFlowThread.h:
Make mapFlowToRegion virtual so that RenderMultiColumnFlowThread can
override it.

* rendering/RenderMultiColumnFlowThread.cpp:
(WebCore::RenderMultiColumnFlowThread::mapFromFlowToRegion):
* rendering/RenderMultiColumnFlowThread.h:
Implement mapFlowToRegion to correctly translate a flow thread position
into a column offset within a region.

* rendering/RenderMultiColumnSet.cpp:
(WebCore::RenderMultiColumnSet::columnTranslationForOffset):
(WebCore::RenderMultiColumnSet::adjustRegionBoundsFromFlowThreadPortionRect):
* rendering/RenderMultiColumnSet.h:
Refactored some code to make a columnTranslationForOffset helper that
can be used by RenderMultiColumnFlowThread.

LayoutTests:

* fast/multicol/client-rects.html:
* fast/multicol/newmulticol/client-rects-expected.html: Added.
* fast/multicol/newmulticol/client-rects.html: Added.
* platform/mac/fast/multicol/client-rects-expected.png:
* platform/mac/fast/multicol/client-rects-expected.txt:



Canonical link: https://commits.webkit.org/148534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165991 268f45cc-cd09-0410-ab3c-d52691b4dbfc